infrastructure/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    policy.fraguinha.com/defaults: enabled
